DATAMONGO-2304 - Fix documentation anchor for entity callback API.

--- a/src/main/asciidoc/reference/mongo-entity-callbacks.adoc
+++ b/src/main/asciidoc/reference/mongo-entity-callbacks.adoc
@@ -1,3 +1,4 @@
+[[entity-callbacks.mongodb]]
 = Store specific EntityCallbacks
 
 Spring Data MongoDB uses the `EntityCallback` API for its auditing support and reacts on the following callbacks.
