--- a/src/main/asciidoc/reference/mongo-json-schema.adoc
+++ b/src/main/asciidoc/reference/mongo-json-schema.adoc
@@ -208,7 +208,7 @@ template.find(query(matchingDocumentStructure(schema)), Person.class);
 [[mongo.jsonSchema.encrypted-fields]]
 ==== Encrypted Fields
 
-MongoDB 4.2 https://docs.mongodb.com/master/core/security-client-side-encryption/[Field Level Encryption] allows to directly secure certain properties.
+MongoDB 4.2 https://docs.mongodb.com/master/core/security-client-side-encryption/[Field Level Encryption] allows to directly encrypt individual properties.
 
 Properties can be wrapped within an encrypted property when setting up the JSON Schema as shown in the example below.
 
@@ -225,7 +225,7 @@ MongoJsonSchema schema = MongoJsonSchema.builder()
 ----
 ====
 
-NOTE: Make sure to set the drivers `com.mongodb.AutoEncryptionSettings` to use client side encryption.
+NOTE: Make sure to set the drivers `com.mongodb.AutoEncryptionSettings` to use client-side encryption. MongoDB does not support encryption for all field types. Specific data types require deterministic encryption to preserve equality comparison functionality.
 
 [[mongo.jsonSchema.types]]
 ==== JSON Schema Types
