--- a/README.adoc
+++ b/README.adoc
@@ -1,28 +1,68 @@
-image:https://spring.io/badges/spring-data-mongodb/ga.svg[Spring Data MongoDB,link=https://projects.spring.io/spring-data-mongodb#quick-start]
-image:https://spring.io/badges/spring-data-mongodb/snapshot.svg[Spring Data MongoDB,link=https://projects.spring.io/spring-data-mongodb#quick-start]
+image:https://spring.io/badges/spring-data-mongodb/ga.svg[Spring Data MongoDB,link=https://projects.spring.io/spring-data-mongodb#quick-start] image:https://spring.io/badges/spring-data-mongodb/snapshot.svg[Spring Data MongoDB,link=https://projects.spring.io/spring-data-mongodb#quick-start]
 
-image:https://jenkins.spring.io/buildStatus/icon?job=spring-data-mongodb%2Fmaster&subject=Moore%20(master)[link=https://jenkins.spring.io/view/SpringData/job/spring-data-mongodb/]
-image:https://jenkins.spring.io/buildStatus/icon?job=spring-data-mongodb%2F2.1.x&subject=Lovelace%20(2.1.x)[link=https://jenkins.spring.io/view/SpringData/job/spring-data-mongodb/]
-image:https://jenkins.spring.io/buildStatus/icon?job=spring-data-mongodb%2F1.10.x&subject=Ingalls%20(1.10.x)[link=https://jenkins.spring.io/view/SpringData/job/spring-data-mongodb/]
-
-= Spring Data MongoDB
+= Spring Data MongoDB image:https://jenkins.spring.io/buildStatus/icon?job=spring-data-mongodb%2Fmaster&subject=Build[link=https://jenkins.spring.io/view/SpringData/job/spring-data-mongodb/] https://gitter.im/spring-projects/spring-data[image:https://badges.gitter.im/spring-projects/spring-data.svg[Gitter]]
 
 The primary goal of the https://projects.spring.io/spring-data[Spring Data] project is to make it easier to build Spring-powered applications that use new data access technologies such as non-relational databases, map-reduce frameworks, and cloud based data services.
 
-The Spring Data MongoDB project aims to provide a familiar and consistent Spring-based programming model for new datastores while retaining store-specific features and capabilities. The Spring Data MongoDB project provides integration with the MongoDB document database. Key functional areas of Spring Data MongoDB are a POJO centric model for interacting with a MongoDB DBCollection and easily writing a repository style data access layer.
+The Spring Data MongoDB project aims to provide a familiar and consistent Spring-based programming model for new datastores while retaining store-specific features and capabilities.
+The Spring Data MongoDB project provides integration with the MongoDB document database.
+Key functional areas of Spring Data MongoDB are a POJO centric model for interacting with a MongoDB `+Document+` and easily writing a repository style data access layer.
 
-== Getting Help
+== Code of Conduct
 
-For a comprehensive treatment of all the Spring Data MongoDB features, please refer to:
+This project is governed by the link:CODE_OF_CONDUCT.adoc[Spring Code of Conduct]. By participating, you are expected to uphold this code of conduct. Please report unacceptable behavior to spring-code-of-conduct@pivotal.io.
 
-* the https://docs.spring.io/spring-data/mongodb/docs/current/reference/html/[User Guide]
-* the https://docs.spring.io/spring-data/mongodb/docs/current/api/[JavaDocs] have extensive comments in them as well.
-* the home page of https://projects.spring.io/spring-data-mongodb[Spring Data MongoDB] contains links to articles and other resources.
-* for more detailed questions, use https://stackoverflow.com/questions/tagged/spring-data-mongodb[Spring Data Mongodb on Stackoverflow].
+== Getting Started
 
-If you are new to Spring as well as to Spring Data, look for information about https://projects.spring.io/[Spring projects].
+Here is a quick teaser of an application using Spring Data Repositories in Java:
 
-== Quick Start
+[source,java]
+----
+public interface PersonRepository extends CrudRepository<Person, Long> {
+
+  List<Person> findByLastname(String lastname);
+
+  List<Person> findByFirstnameLike(String firstname);
+}
+
+@Service
+public class MyService {
+
+  private final PersonRepository repository;
+
+  public MyService(PersonRepository repository) {
+    this.repository = repository;
+  }
+
+  public void doWork() {
+
+    repository.deleteAll();
+
+    Person person = new Person();
+    person.setFirstname("Oliver");
+    person.setLastname("Gierke");
+    repository.save(person);
+
+    List<Person> lastNameResults = repository.findByLastname("Gierke");
+    List<Person> firstNameResults = repository.findByFirstnameLike("Oli*");
+ }
+}
+
+@Configuration
+@EnableMongoRepositories
+class ApplicationConfig extends AbstractMongoConfiguration {
+
+  @Override
+  public MongoClient mongoClient() {
+    return new MongoClient();
+  }
+
+  @Override
+  protected String getDatabaseName() {
+    return "springdata";
+  }
+}
+----
 
 === Maven configuration
 
@@ -54,181 +94,66 @@ If you'd rather like the latest snapshots of the upcoming major version, use our
 </repository>
 ----
 
-=== MongoTemplate
+== Getting Help
 
-MongoTemplate is the central support class for Mongo database operations. It provides:
+Having trouble with Spring Data? We’d love to help!
 
-* Basic POJO mapping support to and from BSON
-* Convenience methods to interact with the store (insert object, update objects) and MongoDB specific ones (geo-spatial operations, upserts, map-reduce etc.)
-* Connection affinity callback
-* Exception translation into Spring's https://docs.spring.io/spring/docs/current/spring-framework-reference/html/dao.html#dao-exceptions[technology agnostic DAO exception hierarchy].
+* Check the
+https://docs.spring.io/spring-data/mongodb/docs/current/reference/html/[reference documentation], and https://docs.spring.io/spring-data/mongodb/docs/current/api/[Javadocs].
+* Learn the Spring basics – Spring Data builds on Spring Framework, check the https://spring.io[spring.io] web-site for a wealth of reference documentation.
+If you are just starting out with Spring, try one of the https://spring.io/guides[guides].
+* If you are upgrading, check out the https://docs.spring.io/spring-data/mongodb/docs/current/changelog.txt[changelog] for "`new and noteworthy`" features.
+* Ask a question - we monitor https://stackoverflow.com[stackoverflow.com] for questions tagged with https://stackoverflow.com/tags/spring-data[`spring-data-mongodb`].
+You can also chat with the community on https://gitter.im/spring-projects/spring-data[Gitter].
+* Report bugs with Spring Data MongoDB at https://jira.spring.io/browse/DATAMONGO[jira.spring.io/browse/DATAMONGO].
 
-=== Spring Data repositories
+== Reporting Issues
 
-To simplify the creation of data repositories Spring Data MongoDB provides a generic repository programming model. It will automatically create a repository proxy for you that adds implementations of finder methods you specify on an interface. 
+Spring Data uses JIRA as issue tracking system to record bugs and feature requests. If you want to raise an issue, please follow the recommendations below:
 
-For example, given a `Person` class with first and last name properties, a `PersonRepository` interface that can query for `Person` by last name and when the first name matches a like expression is shown below:
+* Before you log a bug, please search the
+https://jira.spring.io/browse/DATAMONGO[issue tracker] to see if someone has already reported the problem.
+* If the issue doesn’t already exist, https://jira.spring.io/browse/DATAMONGO[create a new issue].
+* Please provide as much information as possible with the issue report, we like to know the version of Spring Data that you are using and JVM version.
+* If you need to paste code, or include a stack trace use JIRA `{code}…{code}` escapes before and after your text.
+* If possible try to create a test-case or project that replicates the issue. Attach a link to your code or a compressed file containing your code.
 
-[source,java]
+== Building from Source
+
+You don’t need to build from source to use Spring Data (binaries in https://repo.spring.io[repo.spring.io]), but if you want to try out the latest and greatest, Spring Data can be easily built with the https://github.com/takari/maven-wrapper[maven wrapper].
+You also need JDK 1.8.
+
+[source,bash]
 ----
-public interface PersonRepository extends CrudRepository<Person, Long> {
-
-  List<Person> findByLastname(String lastname);
-
-  List<Person> findByFirstnameLike(String firstname);
-}
-----
-
-The queries issued on execution will be derived from the method name. Extending `CrudRepository` causes CRUD methods being pulled into the interface so that you can easily save and find single entities and collections of them.
-
-You can have Spring automatically create a proxy for the interface by using the following JavaConfig:
-
-[source,java]
-----
-@Configuration
-@EnableMongoRepositories
-class ApplicationConfig extends AbstractMongoConfiguration {
-
-  @Override
-  public MongoClient mongoClient() throws Exception {
-    return new MongoClient();
-  }
-
-  @Override
-  protected String getDatabaseName() {
-    return "springdata";
-  }
-}
+ $ ./mvnw clean install
 ----
 
-This sets up a connection to a local MongoDB instance and enables the detection of Spring Data repositories (through `@EnableMongoRepositories`). The same configuration would look like this in XML:
+If you want to build with the regular `mvn` command, you will need https://maven.apache.org/run-maven/index.html[Maven v3.5.0 or above].
 
-[source,xml]
+_Also see link:CONTRIBUTING.adoc[CONTRIBUTING.adoc] if you wish to submit pull requests, and in particular please sign the https://cla.pivotal.io/sign/spring[Contributor’s Agreement] before your first change, is trivial._
+
+=== Building reference documentation
+
+Building the documentation builds also the project without running tests.
+
+[source,bash]
 ----
-<bean id="template" class="org.springframework.data.mongodb.core.MongoTemplate">
-  <constructor-arg>
-    <bean class="com.mongodb.MongoClient">
-       <constructor-arg value="localhost" />
-       <constructor-arg value="27017" />
-    </bean>
-  </constructor-arg>
-  <constructor-arg value="database" />
-</bean>
-
-<mongo:repositories base-package="com.acme.repository" />
+ $ ./mvnw clean install -Pdistribute
 ----
 
-This will find the repository interface and register a proxy object in the container. You can use it as shown below:
+The generated documentation is available from `target/site/reference/html/index.html`.
 
-[source,java]
-----
-@Service
-public class MyService {
+== Guides
 
-  private final PersonRepository repository;
+The https://spring.io/[spring.io] site contains several guides that show how to use Spring Data step-by-step:
 
-  @Autowired
-  public MyService(PersonRepository repository) {
-    this.repository = repository;
-  }
+* https://spring.io/guides/gs/accessing-data-mongodb/[Accessing Data with MongoDB] is a very basic guide that shows you how to create a simple application and how to access data using repositories.
+* https://spring.io/guides/gs/accessing-mongodb-data-rest/[Accessing MongoDB Data with REST] is a guide to creating a REST web service exposing data stored in MongoDB through repositories.
 
-  public void doWork() {
+== Examples
 
-     repository.deleteAll();
+* https://github.com/spring-projects/spring-data-examples/[Spring Data Examples] contains example projects that explain specific features in more detail.
 
-     Person person = new Person();
-     person.setFirstname("Oliver");
-     person.setLastname("Gierke");
-     person = repository.save(person);
+== License
 
-     List<Person> lastNameResults = repository.findByLastname("Gierke");
-     List<Person> firstNameResults = repository.findByFirstnameLike("Oli*");
- }
-}
-----
-
-=== MongoDB 4.0 Transactions
-
-As of version 4 MongoDB supports https://www.mongodb.com/transactions[Transactions]. Transactions are built on top of
- `ClientSessions` and therefore require an active session.
-
-`MongoTransactionManager` is the gateway to the well known Spring transaction support. It allows applications to use
-https://docs.spring.io/spring/docs/current/spring-framework-reference/html/transaction.html[managed transaction features of Spring].
-The `MongoTransactionManager` binds a `ClientSession` to the thread. `MongoTemplate` automatically detects those and operates on them accordingly.
-
-[source,java]
-----
-@Configuration
-static class Config extends AbstractMongoConfiguration {
-
-	@Bean
-	MongoTransactionManager transactionManager(MongoDbFactory dbFactory) {
-		return new MongoTransactionManager(dbFactory);
-	}
-
-	// ...
-}
-
-@Component
-public class StateService {
-
-	@Transactional
-	void someBusinessFunction(Step step) {
-
-		template.insert(step);
-
-		process(step);
-
-		template.update(Step.class).apply(Update.set("state", // ...
-	};
-});
-----
-
-== Contributing to Spring Data
-
-Here are some ways for you to get involved in the community:
-
-* Get involved with the Spring community on Stackoverflow and help out on the https://stackoverflow.com/questions/tagged/spring-data-mongodb[spring-data-mongodb] tag by responding to questions and joining the debate.
-* Create https://jira.spring.io/browse/DATAMONGO[JIRA] tickets for bugs and new features and comment and vote on the ones that you are interested in.
-* Github is for social coding: if you want to write code, we encourage contributions through pull requests from https://help.github.com/forking/[forks of this repository]. If you want to contribute code this way, please reference a JIRA ticket as well covering the specific issue you are addressing.
-* Watch for upcoming articles on Spring by https://spring.io/blog[subscribing] to spring.io.
-
-Before we accept a non-trivial patch or pull request we will need you to https://cla.pivotal.io/sign/spring[sign the Contributor License Agreement]. Signing the contributor’s agreement does not grant anyone commit rights to the main repository, but it does mean that we can accept your contributions, and you will get an author credit if we do. If you forget to do so, you'll be reminded when you submit a pull request. Active contributors might be asked to join the core team, and given the ability to merge pull requests.
-
-== Running CI tasks locally
-
-Since this pipeline is purely Docker-based, it's easy to:
-
-* Debug what went wrong on your local machine.
-* Test out a a tweak to your test routine before sending it out.
-* Experiment against a new image before submitting your pull request.
-
-All of these use cases are great reasons to essentially run what the CI server does on your local machine.
-
-IMPORTANT: To do this you must have Docker installed on your machine.
-
-1. `docker run -it --mount type=bind,source="$(pwd)",target=/spring-data-mongodb-github springci/spring-data-openjdk8-with-mongodb-4.0:latest /bin/bash`
-+
-This will launch the Docker image and mount your source code at `spring-data-mongodb-github`.
-+
-2. `cd spring-data-mongodb-github`
-+
-Next, run the tests from inside the container:
-+
-3. `./mvnw clean dependency:list test -Dsort -Dbundlor.enabled=false -B` (or with whatever profile you need to test out)
-
-Since the container is binding to your source, you can make edits from your IDE and continue to run build jobs.
-
-If you need to package things up, do this:
-
-1. `docker run -it --mount type=bind,source="$(pwd)",target=/spring-data-mongodb-github springci/spring-data-openjdk8-with-mongodb-4.0:latest /bin/bash`
-+
-This will launch the Docker image and mount your source code at `spring-data-mongodb-github`.
-+
-2. `cd spring-data-mongodb-github`
-+
-Next, package things from inside the container doing this:
-+
-3. `./mvnw clean dependency:list package -Dsort -Dbundlor.enabled=false -B`
-
-NOTE: Docker containers can eat up disk space fast! From time to time, run `docker system prune` to clean out old images.
+Spring Data MongoDB is Open Source software released under the https://www.apache.org/licenses/LICENSE-2.0.html[Apache 2.0 license].
