--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 1.10.23.RELEASE (2019-08-05)
+-----------------------------------------------
+* DATAMONGO-2280 - Introduce Jenkins CI.
+* DATAMONGO-2272 - Release 1.10.23 (Ingalls SR23).
+
+
 Changes in version 2.2.0.RC1 (2019-06-14)
 -----------------------------------------
 * DATAMONGO-2295 - Adapt to renamed TransactionSynchronizationManager.forCurrentTransaction().
