--- a/src/main/asciidoc/reference/mapping.adoc
+++ b/src/main/asciidoc/reference/mapping.adoc
@@ -384,7 +384,7 @@ IMPORTANT: Automatic index creation is only done for types annotated with `@Docu
 The MappingMongoConverter can use metadata to drive the mapping of objects to documents. The following annotations are available:
 
 * `@Id`: Applied at the field level to mark the field used for identity purpose.
-* `@Document`: Applied at the class level to indicate this class is a candidate for mapping to the database. You can specify the name of the collection where the database will be stored.
+* `@Document`: Applied at the class level to indicate this class is a candidate for mapping to the database. You can specify the name of the collection where the data will be stored.
 * `@DBRef`: Applied at the field to indicate it is to be stored using a com.mongodb.DBRef.
 * `@Indexed`: Applied at the field level to describe how to index the field.
 * `@CompoundIndex`: Applied at the type level to declare Compound Indexes
