--- a/src/main/asciidoc/reference/mongodb.adoc
+++ b/src/main/asciidoc/reference/mongodb.adoc
@@ -120,7 +120,7 @@ import org.springframework.data.mongodb.core.MongoOperations;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Query;
 
-import com.mongodb.MongoClient;
+import com.mongodb.client.MongoClients;
 
 public class MongoApp {
 
@@ -128,7 +128,7 @@ public class MongoApp {
 
   public static void main(String[] args) throws Exception {
 
-    MongoOperations mongoOps = new MongoTemplate(new MongoClient(), "database");
+    MongoOperations mongoOps = new MongoTemplate(MongoClients.create(), "database");
     mongoOps.insert(new Person("Joe", 34));
 
     log.info(mongoOps.findOne(new Query(where("name").is("Joe")), Person.class));
@@ -591,7 +591,7 @@ import org.springframework.data.mongodb.core.MongoOperations;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.SimpleMongoDbFactory;
 
-import com.mongodb.MongoClient;
+import com.mongodb.client.MongoClients;
 
 public class MongoApp {
 
@@ -599,7 +599,7 @@ public class MongoApp {
 
   public static void main(String[] args) {
 
-    MongoOperations mongoOps = new MongoTemplate(new SimpleMongoDbFactory(new MongoClient(), "database"));
+    MongoOperations mongoOps = new MongoTemplate(new SimpleMongoClientDbFactory(MongoClients.create(), "database"));
 
     Person p = new Person("Joe", 34);
 
