--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -4,22 +4,23 @@
 [[new-features.2-2-0]]
 == What's New in Spring Data MongoDB 2.2
 * Compatibility with MongoDB 4.2 deprecating `eval`, `group` and `geoNear` Template API methods.
-* <<mongo.query.kotlin-support,Type-safe Queries for Kotlin>>
+* Extended SpEL aggregation support for MongoDB 3.4 and MongoDB 4.0 operators (see <<mongo.aggregation.projection.expressions>>).
 * <<mongodb.reactive.repositories.queries.type-safe,Querydsl support for reactive repositories>> via `ReactiveQuerydslPredicateExecutor`.
 * <<reactive.gridfs,Reactive GridFS support>>.
-* Extended SpEL aggregation support for MongoDB 3.4 and MongoDB 4.0 operators (see <<mongo.aggregation.projection.expressions>>).
+* <<mongodb.repositories.queries.aggregation, Aggregation framework>> support via repository query methods.
+* Declarative reactive transactions using <<mongo.transactions.reactive-tx-manager, @Transactional>>.
 * Template API delete by entity considers the version property in delete queries.
 * Repository deletes now throw `OptimisticLockingFailureException` when a versioned entity cannot be deleted.
 * Support `Range<T>` in repository between queries.
 * Changed behavior of `Reactive/MongoOperations#count` now limiting the range to count matches within by passing on _offset_ & _limit_ to the server.
-* Kotlin extension methods accepting `KClass` are deprecated now in favor of `reified` methods.
 * Support of array filters in `Update` operations.
 * <<mongo.jsonSchema.generated, JSON Schema generation>> from domain types.
 * SpEL support in for expressions in `@Indexed`.
-* Annotation-based Collation support through `@Document` and `@Query`.
-* <<mongodb.repositories.queries.aggregation, Aggregation framework>> support via repository query methods.
-* Declarative reactive transactions using <<mongo.transactions.reactive-tx-manager, @Transactional>>.
 * Support for <<mapping-usage-indexes.hashed-index>>.
+* Annotation-based Collation support through `@Document` and `@Query`.
+* <<mongo.query.kotlin-support,Type-safe Queries for Kotlin>>.
+* Kotlin extension methods accepting `KClass` are deprecated now in favor of `reified` methods.
+* Kotlin <<kotlin.coroutines>> support.
 
 [[new-features.2-1-0]]
 == What's New in Spring Data MongoDB 2.1
