--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,26 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.1.11.RELEASE (2019-09-30)
+----------------------------------------------
+* DATAMONGO-2377 - Wrong processing of $$value and $$this.
+* DATAMONGO-2374 - Couldn't find PersistentEntity for type class org.bson.Document using query methods.
+* DATAMONGO-2366 - CursorReadingTask calls errorHandler.handleError twice for exception raised while reading from the cursor.
+* DATAMONGO-2361 - Trivial fix in Mapping Annotation Overview chapter of RefDoc.
+* DATAMONGO-2360 - MongoTemplate#count does not use hinted index.
+* DATAMONGO-2354 - protected function expose package-private propertty.
+* DATAMONGO-2352 - Documentation Typo Fix.
+* DATAMONGO-2351 - UnsupportedOperationException is thrown during delete with UNACKNOWLEDGED write concern.
+* DATAMONGO-2349 - ZonedDateTime to/from Date not recognized without @Reading/@WritingConverter.
+* DATAMONGO-2348 - Initial value of @Version annotated fields not described correctly in reference documentation.
+* DATAMONGO-2339 - Id property containing underscore not mapped correctly.
+* DATAMONGO-2338 - Unable to specialise MongoRepositoryFactoryBean due to final method.
+* DATAMONGO-2337 - Add HTTPS entries into spring.schemas.
+* DATAMONGO-2333 - Release 2.1.11 (Lovelace SR11).
+* DATAMONGO-2310 - Improve TypedAggregation vs. untyped aggregation documentation.
+* DATAMONGO-1731 - Improve JavaDoc of MongoOperations update / findAndModify methods.
+
+
 Changes in version 2.2.0.RC3 (2019-09-06)
 -----------------------------------------
 * DATAMONGO-2358 - Upgrade to Kotlin Coroutines 1.3.0.
