--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -9,6 +9,7 @@
 * Removal of `_id` flattening for composite Id's when using `MongoTemplate` aggregations.
 * Apply pagination when using GridFS `find(Query)`.
 * <<sharding,Sharding key derivation>> via `@Sharded`.
+* `$merge` and `$addFields` aggregation pipeline stages.
 
 [[new-features.2-2-0]]
 == What's New in Spring Data MongoDB 2.2
