DATAMONGO-2237 - Do not flatten _id in aggregation results.
We now no longer flatten the _id field in aggregations when using the imperative template API.

Omitting flattening allows result consumption using the same structure that was used to read and write the underlying MongoDB document.

Flattening was only applied in the imperative API but not the reactive one so both APIs behave now consistently.

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -1,6 +1,11 @@
 [[new-features]]
 = New & Noteworthy
 
+[[new-features.2-3-0]]
+== What's New in Spring Data MongoDB 2.3
+
+* Removal of `_id` flattening for composite Id's when using `MongoTemplate` aggregations.
+
 [[new-features.2-2-0]]
 == What's New in Spring Data MongoDB 2.2
 * Compatibility with MongoDB 4.2 deprecating `eval`, `group` and `geoNear` Template API methods.
