--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -1,6 +1,11 @@
 [[new-features]]
 = New & Noteworthy
 
+[[new-features.2-3-0]]
+== What's New in Spring Data MongoDB 2.3
+
+* Support for <<mongo-template.aggregation-update,aggregation pipelines in update operations>>.
+
 [[new-features.2-2-0]]
 == What's New in Spring Data MongoDB 2.2
 * Compatibility with MongoDB 4.2 deprecating `eval`, `group` and `geoNear` Template API methods.
