--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -5,9 +5,11 @@
 == What's New in Spring Data MongoDB 2.3
 
 * Support for <<mongo-template.aggregation-update,aggregation pipelines in update operations>>.
+* Apply pagination when using GridFS `find(Query)`.
 
 [[new-features.2-2-0]]
 == What's New in Spring Data MongoDB 2.2
+
 * Compatibility with MongoDB 4.2 deprecating `eval`, `group` and `geoNear` Template API methods.
 * Extended SpEL aggregation support for MongoDB 3.4 and MongoDB 4.0 operators (see <<mongo.aggregation.projection.expressions>>).
 * <<mongodb.reactive.repositories.queries.type-safe,Querydsl support for reactive repositories>> via `ReactiveQuerydslPredicateExecutor`.
