DATAMONGO-2427 - Update GridFS API to use MongoDB native ByteBuffer Publisher API and introduce UUID format configuration options.
Move from AsyncInputStream handling to Publisher for GridFS.
UUID types require additional configuration setup to prevent errors while processing legacy (type 3) binary types. We still use type 3 as default but allow codec configuration for type 4 via Java and XML configuration.
Updated migration guide.

--- a/README.adoc
+++ b/README.adoc
@@ -208,6 +208,29 @@ Uses `MongoClientSettings` instead of `MongoClientOptions`.
 |
 |===
 
+=== Other Changes
+
+==== UUID Types
+
+The MongoDB UUID representation can now be configured with different formats.
+This has to be done via `MongoClientSettings` as shown in the snippet below.
+
+.UUID Codec Configuration
+====
+[source,java]
+----
+static class Config extends AbstractMongoClientConfiguration {
+
+    @Override
+    public void configureClientSettings(MongoClientSettings.Builder builder) {
+        builder.uuidRepresentation(UuidRepresentation.STANDARD);
+    }
+
+    // ...
+}
+----
+====
+
 == Getting Help
 
 Having trouble with Spring Data? We’d love to help!
