DATAMONGO-2448 - Bump Version to 3.0 SNAPSHOT.
In preparation for the upcoming breaking changes when switching to the MongoDB Java Driver 4.0 and the breaking changes required for that update (expected for Milestone 2), we eagerly bump the version number to 3.0.

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -1,8 +1,8 @@
 [[new-features]]
 = New & Noteworthy
 
-[[new-features.2-3-0]]
-== What's New in Spring Data MongoDB 2.3
+[[new-features.3.0]]
+== What's New in Spring Data MongoDB 3.0
 
 * Support for <<mongo-template.aggregation-update,aggregation pipelines in update operations>>.
 * Apply pagination when using GridFS `find(Query)`.
